# codyfortran

./: .fortls  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  ford.md  prompt.md  runTestsAndCov.sh  setBuildVars.sh
.github/agents/: qualityAgent.md
.github/skills/extendModule/: SKILL.md
.github/skills/printer-system/: SKILL.md
.github/skills/setup-simulation-app/: SKILL.md
.github/skills/writeTestCase/: SKILL.md
.github/workflows/: tests.yml
app/: P_HfGroundStateOfNe.f90  P_HfGroundStateOfNe.json
app/HartreeFockGroundOfNe/: P_HartreeFockGroundOfNe.json
app/ne/laser/: P_TimePropagationMctdhxLaser.f90  P_TimePropagationMctdhxLaser.json
src/Absorber/: A_Absorber.md  M_Absorber.f90  S_Absorber.f90
src/Absorber/Linear/: M_Absorber_Linear.f90  S_Absorber_Linear.f90
src/Absorber/Ylm/: M_Absorber_Ylm.f90  S_Absorber_Ylm.f90
src/Coeffs/: A_Coeffs.md  M_Coeffs.f90  S_Coeffs.f90
src/Coeffs/Generic/: M_Coeffs_Generic.f90  S_Coeffs_Generic.f90
src/Coeffs/Hubbard/: M_Coeffs_Hubbard.f90  S_Coeffs_Hubbard.f90
src/CoeffsInit/: A_CoeffsInit.md  M_CoeffsInit.f90  S_CoeffsInit.f90
src/CoeffsInit/Excited/: M_CoeffsInit_Excited.f90  S_CoeffsInit_Excited.f90
src/CoeffsInit/Load/: M_CoeffsInit_Load.f90  S_CoeffsInit_Load.f90
src/CoeffsInit/Unary/: M_CoeffsInit_Unary.f90  S_CoeffsInit_Unary.f90
src/ConfigList/: A_ConfigList.md  M_ConfigList.f90  S_ConfigList.f90
src/ConfigList/AllActive/: M_ConfigList_AllActive.f90  S_ConfigList_AllActive.f90
src/DiagonalizerList/: A_DiagonalizerList.md  M_DiagonalizerList.f90  S_DiagonalizerList.f90
src/DiagonalizerList/Arpack/: M_DiagonalizerList_Arpack.f90  S_DiagonalizerList_Arpack.f90
src/DiagonalizerList/Lapack/: M_DiagonalizerList_Lapack.f90  S_DiagonalizerList_Lapack.f90
src/Grid/: A_Grid.md  M_Grid.f90  S_Grid.f90
src/Grid/Lattice/: M_Grid_Lattice.f90  S_Grid_Lattice.f90
src/Grid/Linear/: M_Grid_Linear.f90  S_Grid_Linear.f90
src/Grid/Polar/: M_Grid_Polar.f90  S_Grid_Polar.f90
src/Grid/Prolate/: M_Grid_Prolate.f90  S_Grid_Prolate.f90
src/Grid/Spherical/: M_Grid_Spherical.f90  S_Grid_Spherical.f90
src/Grid/Square/: M_Grid_Square.f90  S_Grid_Square.f90
src/Grid/Ylm/: M_Grid_Ylm.f90  S_Grid_Ylm.f90
src/GroundSolver/: A_GroundSolver.md  M_GroundSolver.f90  S_GroundSolver.f90
src/GroundSolver/Mcscf/: M_GroundSolver_Mcscf.f90  S_GroundSolver_Mcscf.f90
src/GroundSolver/Scf/: M_GroundSolver_Scf.f90  S_GroundSolver_Scf.f90
src/GroundSolver/Tdhx/: M_GroundSolver_Tdhx.f90  S_GroundSolver_Tdhx.f90
src/IntegratorList/: A_IntegratorList.md  M_IntegratorList.f90  S_IntegratorList.f90
src/IntegratorList/CrankNicolson/: M_IntegratorList_CrankNicolson.f90  (+1 more)
src/Method/: A_Method.md  M_Method.f90  S_Method.f90
src/Mixing/: A_Mixing.md  M_Mixing.f90  S_Mixing.f90
src/Orbs/: A_Orbs.md  M_Orbs.f90  S_Orbs.f90
src/OrbsInit/: A_OrbsInit.md  M_OrbsInit.f90  S_OrbsInit.f90
src/Propagator/: A_Propagator.md  M_Propagator.f90  S_Propagator.f90
src/SysGauge/: A_SysGauge.md  M_SysGauge.f90  S_SysGauge.f90
src/SysInteraction/: A_SysInteraction.md  M_SysInteraction.f90  S_SysInteraction.f90
src/SysKinetic/: A_SysKinetic.md  M_SysKinetic.f90  S_SysKinetic.f90
src/SysPotential/: A_SysPotential.md  M_SysPotential.f90  S_SysPotential.f90
src/Utils/: A_Utils.md  M_Utils_Actions.f90  M_Utils_ArpackLib.f90  M_Utils_BlasLib.f90  M_Utils_Characters.f90  M_Utils_CombinationGslLib.f90  M_Utils_CombinationManual.f90  M_Utils_Combinatorics.f90  M_Utils_Constants.f90  M_Utils_ConvolutionFftw3.f90  M_Utils_ConvolutionIntegral.f90  M_Utils_DataStorage.f90  M_Utils_DerivativeFedvr.f90  M_Utils_DerivativeFedvrEcs.f90  M_Utils_DerivativeFftw3.f90  M_Utils_DerivativeFinDiff.f90  M_Utils_ExpokitLib.f90  M_Utils_Fedvr.f90  M_Utils_FedvrEcs.f90  M_Utils_Fftw3Lib.f90  M_Utils_FtManual.f90  M_Utils_Integrate.f90  M_Utils_Json.f90  M_Utils_LapackLib.f90  M_Utils_Legendre.f90  M_Utils_MultisetGslLib.f90  M_Utils_MultisetManual.f90  M_Utils_NeuralCollision.f90  M_Utils_Odeiv2GslLib.f90  M_Utils_PermutationGslLib.f90  M_Utils_PermutationManual.f90  M_Utils_PrinterDensity.f90  M_Utils_PrinterDensityLinear.f90  M_Utils_PrinterNatOrb.f90  M_Utils_PrinterObservable.f90  M_Utils_PrinterObservableLattice.f90  M_Utils_PrinterObservableLinear.f90  M_Utils_PrinterObservableYlm.f90  M_Utils_PrinterRdm.f90  M_Utils_PrinterRdmLinear.f90  (+15 more)
test/: T_BoseHubbard_01_ExactDiagTdciLapack.f90  T_BoseHubbard_01_ExactDiagTdciLapack.json  T_BoseHubbard_02_ExactDiagTdciArpack.f90  T_BoseHubbard_03_ImagTimePropagationTdci.f90  T_BoseHubbard_03_ImagTimePropagationTdci.json  T_BoseHubbard_04_ImagTimePropagationMctdhx.f90  T_BoseHubbard_05_ImagTimePropagationTdhx.f90  T_BoseHubbard_05_ImagTimePropagationTdhx.json  T_FermiHubbard_01_ExactDiagTdciLapack.f90  T_FermiHubbard_02_ExactDiagTdciArpack.f90  T_FermiHubbard_03_ExactPropagationTdci.f90  T_FermiHubbard_04_ImagTimePropagationTdci.f90  T_FermiHubbard_04_ImagTimePropagationTdci.json  T_FermiHubbard_05_ImagTimePropagationMctdhx.f90  T_FermiHubbard_05_ImagTimePropagationMctdhx.json  T_FermiHubbard_06_ImagTimePropagationTdhx.f90  T_FermiHubbard_06_ImagTimePropagationTdhx.json  T_H3d_01_ImagTimePropagationSingleBody.f90  T_H3d_01_ImagTimePropagationSingleBody.json  T_He1d_01_ExactDiagGridBasedFullExpansion.f90  T_He1d_01_ExactDiagGridBasedFullExpansion.json  T_He1d_02_ExactDiagTdci.f90  T_He1d_03_ImagTimePropagationTdhx.f90  T_He1d_04_ImagTimePropagationMctdhx.f90  T_He1d_05_TimePropagationMctdhx.f90  T_He1d_05_TimePropagationMctdhx.json  T_Ne3d_01_ImagTimePropagationTdhx.f90  T_Ne3d_02_GroundSolverTdhx.f90  T_Ne3d_02_GroundSolverTdhx.json  T_Ne3d_03_GroundSolverTdhxYlm.f90  T_Ne3d_03_GroundSolverTdhxYlm.json  T_SysInteraction_Ylm_Coulomb_BlockEq.f90  T_SysInteraction_Ylm_Coulomb_BlockEq.json  T_SysInteraction_Ylm_Coulomb_FullEq.f90  T_SysInteraction_Ylm_Coulomb_FullEq.json  T_SysInteraction_Ylm_Coulomb_StdImpl.f90  T_SysInteraction_Ylm_Coulomb_TwoScan.f90  T_SysKinetic_Ylm_Laplacian_Fedvr.f90  T_SysKinetic_Ylm_Laplacian_Fedvr.json  T_Utils_DerivativeFedvr.f90
(+320 files in other folders)
